2008-06-07  Stefan Jahn  <stefan@lkcc.org>

	* library/Varistors.lib: Added new varistor library.  Thanks a lot
	to Gunther Kraut!

2008-05-29  Stefan Jahn  <stefan@lkcc.org>

	* library/Regulators.lib: Added new library containing some
	voltage regulators based on SPICE models.

2008-05-28  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added few more BJT transistors from
	Zetex (FZT's in SOT223 packages).

2008-05-05  Stefan Jahn  <stefan@lkcc.org>

	* library/Makefile.am (COMPLIBS): Added three more libraries
	(Ideal, PMOSFETs and NMOSFETs) provided by Gunther.  Thanks a lot!

2008-01-07  Stefan Jahn  <stefan@lkcc.org>

	* searchdialog.cpp (slotSearch): Fixed bug avoiding displaying
	wrong symbol within search results.  Thanks to Michael!

2007-12-28  Stefan Jahn  <stefan@lkcc.org>

	* library/JFETs.lib: Added loads of new jfet models.

2007-12-26  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added some more transistor models.

2007-11-22  Stefan Jahn  <stefan@lkcc.org>

	* displaydialog.cpp (DisplayDialog): Fixed bug in help display
	window due to reuse as model display window.

2007-05-12  Stefan Jahn  <stefan@lkcc.org>

	* librarydialog.cpp (slotRename): Also rename the library
	subdirectory.
	(slotDelete): Additionally remove all files in the library
	subdirectory as well as the subdirectory itself.

	* displaydialog.cpp (DisplayDialog): Showing now all three type of
	models: Analog, VHDL and Verilog.

2007-05-10  Stefan Jahn  <stefan@lkcc.org>

	* qucslib.cpp (slotShowComponent): Allow also VHDL and Verilog
	entries to define a model.  Fixed drag'n'drop ability for digital
	only models.

2007-03-07  Stefan Jahn  <stefan@lkcc.org>

	* library/OpAmps.lib: Added Mike's opamp models.

2006-12-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* added new LED components

2006-08-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* library/Transistors.lib: Added new transistor components
	by Gunther Kraut
